refactor mutex cpa